--- a/header.html
+++ b/header.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Longshot Brewing Co</title>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
