--- a/car.html
+++ b/car.html
@@ -1,3 +1,31 @@
-<div id="jumbotron" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators"></ol>
+<div id="slideshow" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+        <li data-target="#slideshow" data-slide-to="1"></li>
+        <li data-target="#slideshow" data-slide-to="2"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="img/wrestle.jpg" alt="Arm Wrestling">
+        </div>
+
+        <div class="item">
+            <img src="img/blurstools.jpg" alt="Barstools with barrels">
+        </div>
+
+        <div class="item">
+            <img src="img/restaurant.jpg" alt="People in Restaurant">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#slideshow" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#slideshow" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
