--- a/car.html
+++ b/car.html
@@ -1,4 +1,4 @@
-<div id="slideshow" class="carousel slide" data-ride="carousel">
+<div id="slideshow" class="carousel slide" data-ride="carousel" data-interval="5000">
     <ol class="carousel-indicators">
         <li data-target="#slideshow" data-slide-to="0" class="active"></li>
         <li data-target="#slideshow" data-slide-to="1"></li>
@@ -15,7 +15,7 @@
         </div>
 
         <div class="item">
-            <img src="img/restaurant.jpg" alt="People in Restaurant">
+            <img src="img/beer.jpg" alt="People in Restaurant">
         </div>
     </div>
 
