--- a/car.html
+++ b/car.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="item">
-            <img src="img/restaurant-sm.jpg" alt="People in Restaurant">
+            <img src="img/restaurant.jpg" alt="People in Restaurant">
         </div>
     </div>
 
