Reformatted a few pages

--- a/car.html
+++ b/car.html
@@ -3,20 +3,27 @@
         <li data-target="#slideshow" data-slide-to="0" class="active"></li>
         <li data-target="#slideshow" data-slide-to="1"></li>
         <li data-target="#slideshow" data-slide-to="2"></li>
+        <li data-target="#slideshow" data-slide-to="3"></li>
     </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="img/wrestle.jpg" alt="Arm Wrestling">
-        </div>
 
-        <div class="item">
+        <div class="item active">
             <img src="img/blurstools.jpg" alt="Barstools with barrels">
         </div>
 
         <div class="item">
-            <img src="img/beer-circle.jpg" alt="People in Restaurant">
+            <img src="img/beerjar.jpg" alt="Beer in a Jar">
         </div>
+
+        <div class="item">
+            <img src="img/wrestle.jpg" alt="Arm Wrestling">
+        </div>
+
+        <div class="item">
+            <img src="img/beer-circle.jpg" alt="Beers in a circle">
+        </div>
+
     </div>
 
     <!-- Left and right controls -->
