--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,8 @@
     <a href="#"><img src="img/twitter-logo.png" alt="twitter logo"></a>
 </div>
 <div id="jumbo">
-    <a href="index.php"><img id="logo" class="center-block" src="img/longshot-logo.png" alt="Longshot Brewing Logo"></a>
+    <a href="index.php"><img id="logo" class="center-block img-responsive" src="img/longshot-logo.png"
+                             alt="Longshot Brewing Logo"></a>
 </div>
 <nav>
     <ul class="nav nav-tabs nav-justified">
