Cleaned some code.

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,7 @@
 <footer>
-    <h4>Longshot Brewing Co. &copy; 2015</h4>
+    <h5 class="left">Longshot Brewing Co. &copy; 2015</h5>
+    <h5 class="right"><em>
+        241 State St. <br>
+        Rochester, NY 14623 <br>
+        585-555-1234 </em></h5>
 </footer>
